# RefSync

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: usage.md
examples/sample_library/: .refsync-tracker.json  library.bib  sample.bib
notebooks/: get_started.ipynb
refsync/: __init__.py  bib_utils.py  cli.py  config.py  core copy.py  core.py  crossref_client.py  dedupe.py  file_utils.py  metadata_extraction.py  ref_client.py  tracker.py
scripts/: run_refsync.sh
tests/: test_bib_utils.py  test_core.py
