[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refsync"
version = "0.1.0"
description = "Rename PDFs, fetch citations, and update BibTeX with JabRef-friendly file links."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Hamed Shourabizadeh"}]
dependencies = [
    "requests",
    "bibtexparser",
    "pymupdf",
    "python-slugify",
    "tenacity"
]

[project.urls]
Homepage = "https://github.com/hshurabi/RefSync"

[project.scripts]
refsync = "refsync.cli:main"

